a fix for sider adding overflow: none on quill editor

--- a/src/app.less
+++ b/src/app.less
@@ -7,13 +7,11 @@ html {
   background-color: black;
   font-size: 16px;
   height: 100%;
-  overflow: visible;
 }
 
 html body {
   height: 100%;
   background-color: #000000;
-  overflow: visible;
 }
 
 // media queries to change font-size for rem values
